[package]
description = "ternary-em - SuperInstance ecosystem crate"
repository = "https://github.com/SuperInstance/ternary-em"
name = "ternary-em"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
ternary-types = { git = "https://github.com/SuperInstance/ternary-types.git", features = ["std"] }
